# tiny-player

./: .gitignore  Cargo.toml  Dockerfile.linux  build.rs  readme.md
.github/workflows/: build.yml  pullfrog.yml  rust.yml
src/: ai_sub_title.rs  ai_sub_title2.rs  appui.rs  audio_play.rs  controlbar_ui.rs  decode.rs  gpu_post_process.rs  internet_resource_ui.rs  main.rs  playlist_ui.rs  present_data_manage.rs  translate.rs
src/shaders/: fallback_scaling_shader.wgsl  scaling_shader.wgsl
src/whisper_burn/: audio.rs  beam.rs  helper.rs  token.rs  transcribe.rs
src/whisper_burn/model/: load.rs  mod.rs
