[package]
name = "tiny-player"
version = "0.0.16"
edition = "2024"
description = "a tiny media player"
authors = ["Lori-Shu"]

[dependencies]
ffmpeg-the-third = "4.0.1"
rodio = "0.21.1"
bytemuck = "1.22.0"
image = { version = "0.25.9", features = ["jpeg", "png"] }
#egui dep list
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
#
egui_file = "0.25.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["local-time"]}
time = { version = "0.3.44", features = ["formatting","local-offset"] }
keepawake = "0.6.0"
tokio = { version = "1.49.0", features = ["full"] }
# reqwest = "0.12.23"
# reqwest-websocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# candle-kernels = "=0.9.1"
# candle-core = {version="=0.9.1",features=["cuda"]}
# candle-nn = {version="=0.9.1",features=["cuda"]}
# candle-transformers = {version="=0.9.1"}
tokenizers = "0.22.2"
rustfft = "6.4.1"
derive_builder = "0.20.2"
anyhow = "1.0.102"
burn = {version="0.20.1",features=["cuda"]}
webrtc-vad = "0.4.0"
strum = "0.28.0"
strum_macros = "0.28.0"
[target.'cfg(windows)'.dependencies]

[build-dependencies]
winresource = "0.1.29"