[package]
name = "tiny-player"
version = "0.1.3"
edition = "2024"
description = "a tiny media player"
authors = ["Lori-Shu"]

[dependencies]
ffmpeg-the-third = "5.0.0"
flume = "0.12.0"
rodio = "0.22.2"
bytemuck = "1.22.0"
image = { version = "0.25.9", features = ["jpeg", "png"] }
#egui dep list
eframe = { version = "0.34.1", features = ["wgpu"] }
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image"] }
#
glam = "0.32.1"
egui_file = "0.26.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["local-time"]}
time = { version = "0.3.44", features = ["formatting","local-offset"] }
keepawake = "0.6.0"
tokio = { version = "1.52.0", features = ["full"] }
reqwest = {version="0.13.2",features=["form","stream"]}
# reqwest-websocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# candle-core = {version="0.9.2",features=["cuda"]}
# candle-nn = {version="0.9.2",features=["cuda"]}
# candle-transformers = {version="0.9.2"}
# tokenizers = "0.22.2"
# rustfft = "6.4.1"
derive_builder = "0.20.2"
anyhow = "1.0.102"
md-5 = "0.10.6"
quick-m3u8 = "0.8.0"
futures-util = "0.3.32"
tokio-util = "0.7.18"
num-complex = "0.4.6"
[target.'cfg(windows)'.dependencies]

[build-dependencies]
winresource = "0.1.29"